# interview

./: .gitignore  README.md
blackjack/: README.md  run_simulation.py
blackjack/api/: pyproject.toml  pytest.ini  run_simulation.py
blackjack/api/core/: __init__.py  card.py  deck.py  game.py  hand.py  player.py  simulator.py  strategy.py
blackjack/api/strategies/: __init__.py  random.py  simple.py  submitting.py
blackjack/api/tests/: conftest.py  test_card.py  test_game.py  test_hand.py
tic-tac-toe/: README.md  board.py  computer_strategy.py  run_elo_simulation.py  run_simulation.py
tic-tac-toe/onsite/: README.md  computer_strategy.py  human_strategy.py
tic-tac-toe/onsite_submissions/: chunfeng_fixed.py  computer_strategy.py  hamzah_1.py  hamzah_2.py  leslie.py  tanisha.py
tic-tac-toe/submissions/: chunfeng.py  hamzah_1.py  hamzah_2.py  kelvin_minimax.py  kelvin_tweak.py  samir.py  tanisha.py  yassine.py
tic-tac-toe/takehome/: README.md  sample_solution.py
