[tool.poetry]
name = "api"
version = "0.1.0"
description = "A blackjack game interview question"
authors = ["Secoda Engineering <engineering@secoda.co>"]
readme = "README.md"
packages = [
    { include = "core" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
